(ft-landing-page): finish landing page [#158930603]

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,10 +8,27 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
     <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+    <div class="main">
+        <section id="left" class="register container">
+            <h2>Register section</h2>
+        </section>
+        <section id="right" class="about bg">
+            <div class="story-section">
+                <h1>My Dairy.</h1>
+                <h1>Your space to capture your thoughts and feelings</h1>
+                <p>Getting started is only a few click away</p>
+                <div class="">
+                    <button class="btn responsive-btn">Learn more</button>
+                    <button class="btn responsive-btn" onclick="document.getElementById('modalBox').style.display='block'">Login</button>
+                </div>
+            </div>
+        </section>
+    </div>
 
     <script src="main.js"></script>
 
