--- a/ui/user-day-entries.html
+++ b/ui/user-day-entries.html
@@ -21,10 +21,9 @@
         </a>
         <a href="">Username</a>
         <hr>
-        <a href="/days.html">Entries</a>
-        <a href="/userprofile.html">User Profile</a>
-        <a href="/settings.html">Settings</a>
-        <a href="/help.html">help</a>
+        <a href="./user-entries.html">Entries</a>
+        <a href="./user-profile.html">User Profile</a>
+        <a href="./help.html">help</a>
     </div>
     
     <div id="main">
@@ -38,7 +37,7 @@
             <input type="text" class="input-field" placeholder="Search.." name="search">
             
                 <div class="">
-                    <a href="#">
+                    <a href="./entry-content.html">
                         <div class="card row-entry">
                             <div class="day">
                                 <h2>hr:min:sec</h2>
@@ -55,7 +54,7 @@
                     </div>
                 </div>
 
-                <div class="">
+                <div class="./entry-content.html">
                         <a href="#">
                             <div class="card row-entry">
                                 <div class="day">
@@ -73,7 +72,7 @@
                         </div>
                     </div>
 
-                    <div class="">
+                    <div class="./entry-content.html">
                             <a href="#">
                                 <div class="card row-entry">
                                     <div class="day">
