--- a/ui/user-entries.html
+++ b/ui/user-entries.html
@@ -21,10 +21,9 @@
         </a>
         <a href="">Username</a>
         <hr>
-        <a href="/days.html">Entries</a>
-        <a href="/userprofile.html">User Profile</a>
-        <a href="/settings.html">Settings</a>
-        <a href="/help.html">help</a>
+        <a href="./user-entries.html">Entries</a>
+        <a href="./user-profile.html">User Profile</a>
+        <a href="./help.html">help</a>
     </div>
     
     <div id="main">
@@ -36,7 +35,7 @@
         <div class="container">
             <input type="text" class="input-field" placeholder="Search.." name="search">
             
-            <a href="#">
+            <a href="./user-day-entries.html">
                 <div class="card row-entry">
                     <div class="day">
                         <h2>July 1st</h2>
@@ -46,7 +45,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="./user-day-entries.html">
                 <div class="card row-entry">
                     <div class="day">
                         <h2>June 30th</h2>
@@ -56,7 +55,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="./user-day-entries.html">
                     <div class="card row-entry">
                         <div class="day">
                             <h2>June 30th</h2>
@@ -66,7 +65,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./user-day-entries.html">
                     <div class="card row-entry">
                         <div class="day">
                             <h2>June 30th</h2>
@@ -76,7 +75,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./user-day-entries.html">
                     <div class="card row-entry">
                         <div class="day">
                             <h2>June 30th</h2>
