--- a/ui/user-profile.html
+++ b/ui/user-profile.html
@@ -21,10 +21,9 @@
         </a>
         <a href="">Username</a>
         <hr>
-        <a href="/days.html">Entries</a>
-        <a href="/userprofile.html">User Profile</a>
-        <a href="/settings.html">Settings</a>
-        <a href="/help.html">help</a>
+        <a href="./user-entries.html">Entries</a>
+        <a href="./user-profile.html">User Profile</a>
+        <a href="./help.html">help</a>
     </div>
     
     <div id="main">
