(bg-ui-ux-experience):improve the ui-ux experienece [Fix #159001074]

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,9 +7,10 @@
     <title>My Diary... Your space for thoughts and feelings</title>
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="styles/main.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -79,10 +80,9 @@
             </div>
             </form>
         </div>
-        
     </div>
 
-    <script src="main.js"></script>
+    <script src="scripts/main.js"></script>
 
 </body>
 
