(bg-enhance-typography): enhance the color scheme  and the font [Fixes #159001074]

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
 </head>
@@ -37,7 +38,7 @@
                         <input class="input-field" type="password" placeholder="Password" name="psw">
                     </div>
             
-                    <button type="submit" class="btn">Register</button>
+                    <button type="submit" class="input-container btn">Register</button>
                 </form>
                 <p>Already have an account?
                     <a class="" href="">Login</a>
