--- a/ui/user-profile.html
+++ b/ui/user-profile.html
@@ -57,7 +57,7 @@
                             <option value="canada">On</option>
                         </select>
 
-                        <input type="submit" value="Edit">
+                        <input type="submit" class="btn" value="Edit">
                     
                     </form>
                 </div>
