(bg-layout-adjustment):fix some layout in the template [Fixes #159001074]

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,10 +17,10 @@
 <body>
     <div class="main">
         <section id="left" class="register container">
-            <div class="text-center container">
+            <div class="text-center">
                 <h1>My Diary.</h1>
-                <h1>Get you thoughts and feelings capture</h1>
-                <p>Getting is quite simple and easy. Just fill out the info below</p>
+                <h1>Get you thoughts and feelings captured.</h1>
+                <p>Getting started is quite simple and easy. Just fill out the info below.</p>
             
                 <form>
                     <div class="input-container">
@@ -38,7 +38,7 @@
                         <input class="input-field" type="password" placeholder="Password" name="psw">
                     </div>
             
-                    <button type="submit" class="input-container btn">Register</button>
+                    <button type="submit" class="input-container btn text-center">Register</button>
                 </form>
                 <p>Already have an account?
                     <a class="" href="">Login</a>
@@ -48,8 +48,8 @@
         <section id="right" class="about bg">
             <div class="story-section">
                 <h1>My Dairy.</h1>
-                <h1>Your space to capture your thoughts and feelings</h1>
-                <p>Getting started is only a few click away</p>
+                <h1>Your space to capture your thoughts and feelings.</h1>
+                <p>Getting started is only a few click away.</p>
                 <div class="">
                     <button class="btn responsive-btn">Learn more</button>
                     <button class="btn responsive-btn" onclick="document.getElementById('modalBox').style.display='block'">Login</button>
