--- a/ui/user-day-entries.html
+++ b/ui/user-day-entries.html
@@ -40,7 +40,7 @@
             <hr>
             <div class="container">
                 <h2>Month | Day Year</h2>
-                <div class="container">
+                <div class="#">
                     <button class="btn-float">
                         <i class="fa fa-plus"></i>
                     </button>
