(bg-connect-login-page-to user-entries-page): connect the login btn on the login page to user-entries page [#159001074]

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
+
 </head>
 
 <body>
@@ -73,7 +74,7 @@
                         <input class="input-field" type="password" placeholder="Password" name="psw">
                     </div>
         
-                    <button type="submit" class="btn">Login</button>
+                    <input type="button"  class="btn" value="Login" onclick="redirect();" />
         
                     <span class="">Forgot
                         <a href="#">password?</a>
