chore(ui-template):implement feedback [finishes #159261735]

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
         <section id="left" class="register container">
             <div class="text-center">
                 <h1>My Diary.</h1>
-                <h1>Get you thoughts and feelings captured.</h1>
+                <h1>Get your thoughts and feelings captured.</h1>
                 <p>Getting started is quite simple and easy. Just fill out the info below.</p>
             
                 <form>
@@ -39,7 +39,7 @@
                         <input class="input-field" type="password" placeholder="Password" name="psw">
                     </div>
             
-                    <button type="submit" class="input-container btn text-center">Register</button>
+                    <button type="submit" class="btn text-center">Register</button>
                 </form>
                 <p>Already have an account?
                     <a class="" href="">Login</a>
@@ -47,7 +47,7 @@
             </div>
         </section>
         <section id="right" class="about bg">
-            <div class="story-section">
+            <div id="overlay" class="story-section">        
                 <h1>My Dairy.</h1>
                 <h1>Your space to capture your thoughts and feelings.</h1>
                 <p>Getting started is only a few click away.</p>
