bug(implement-feedback): fix bug in code base and ui
-modifies the status coode error 500 message to plain text
-modifies the email input type to email
-modifies entry-content.html layout

[finishes #159500204]

--- a/ui/user-day-entries.html
+++ b/ui/user-day-entries.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <h2>Month | Day Year</h2>
                 <div class="#">
-                    <button class="btn-float">
+                    <button class="btn-float" onclick="goToAddNew();">
                         <i class="fa fa-plus"></i>
                     </button>
                     <input type="text" class="input-field" placeholder="Search.." name="search">
