bug(implement-feedback): fixing UI navigations [finishes #159500204]

--- a/ui/index.html
+++ b/ui/index.html
@@ -53,7 +53,7 @@
                     <button type="submit" class="btn text-center">Register</button>
                 </form>
                 <p>Already have an account?
-                    <a class="" href="">Login</a>
+                    <a class="#" href="#"  onclick="document.getElementById('modalBox').style.display='block'">Login</a>
                 </p>
             </div>
         </section>
