bug(implement-feedback):implement feedback on UI
-remove the logout button on small media
-add loout link in the sidenav
-add some styling to enhance the responsiveness of the layout
-add some script
-modifies the all entries page to look like dashboard

[finishes #159548275]

--- a/ui/user-profile.html
+++ b/ui/user-profile.html
@@ -24,6 +24,7 @@
             <hr>
             <a href="./user-entries.html">Entries</a>
             <a href="./user-profile.html">User Profile</a>
+            <a href="./index.html" class="logout">Logout</a>
         </div>
     
         <div class="main-form">
