--- a/ui/user-entries.html
+++ b/ui/user-entries.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width">
     <title>My Diary... Your space for thoughts and feelings</title>
     <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body onload="startTime()">
     <div class="row">
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -24,10 +24,11 @@
             <hr>
             <a href="./user-entries.html">Entries</a>
             <a href="./user-profile.html">User Profile</a>
+            <a href="./index.html" class="logout">Logout</a>
         </div>
         
         <div class="main-form">
-            <div class="row">
+            <div class="row bottom-border">
                 <div class="left">
                     <h2>
                         <span class="hamburgerIcon" onclick="openNav()">&#9776;</span> &nbsp;&nbsp; &nbsp;&nbsp; My Diary... Your Thoughts & Feelings</h2>
@@ -36,8 +37,20 @@
                     <a href="./index.html" class="right btn">Logout</a>
                 </div>
             </div>
-            <hr>
-            <div class="container">
+            <div id="dashboard" class="container">
+                    <div class="card-dash col-1-3">
+                        <h2>Total entry</h2>
+                        <h2>356 entries</h2>
+                    </div>
+                    <div class="card-dash col-1-3">
+                        <h2>Add New</h2>
+                        <h2><i class="fas fa-plus-circle"></i></h2>
+                    </div>
+                    <div class="card-dash col-1-3">
+                        <h2 id="txt"></h2>
+                    </div>
+                </div>
+            <div class="container">                
                 <h2>All Entries in days</h2>
                 <input type="text" class="input-field" placeholder="Search.." name="search">
         
