feat(index-page): fix the gender icon
- modify index.html
- modify main.css

[finishes #159717760]

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
                         <input class="input-field" type="email" placeholder="Email" id="email" name="email" required>
                     </div>
                     <div class="input-container">
-                        <i class="fa fa-key icon"></i>
-                        <select class="input-field" id="gender" name="gender">
+                        <i class="fa fa-intersex icon"></i>
+                        <select class="input-field" id="gender" name="gender" required>
                             <option value="">Choose your gender</option>
                             <option value="Female">Female</option>
                             <option value="Male">Male</option>
