--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
     </div>
 
     <script src="scripts/main.js"></script>
-    <script src="scripts/index.js"></script>
+    <script src="scripts/app.js"></script>
 
 </body>
 
