--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
             </form>
         </div>
     </div>
-
+    <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/app.js"></script>
 
